k8s/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: shipping
  name: shipping
spec:
  ports:
    - name: "50052"
      port: 50052
      targetPort: 50052
  selector:
    io.kompose.service: shipping
